# FrenetTenth

./: CMakeLists.txt  README.md
cfg/: params.json  track.json
include/: cubic_spline_planner.hpp  frenet_optimal_trajectory.hpp  frenet_optimal_trajectory_cuda.hpp  polynomials.hpp
include/cpp_common_structs/: structures.hpp
src/: cubic_spline_planner.cpp  frenet_optimal_trajectory.cpp  frenet_optimal_trajectory_cuda.cpp  frenet_optimal_trajectory_cuda.cu  measuring.cpp  measuring_experiments.cpp  measuring_experiments_traj.cpp  polynomials.cpp  test.cpp
